Fixing dropdown width on smaller screens

--- a/client/src/BCTool/BCTool.css
+++ b/client/src/BCTool/BCTool.css
@@ -5,3 +5,9 @@
 .negative-change {
 	color:  red;
 }
+
+.dropdown-toggle {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
